# voice-agent

backend/: .env  .gitignore  main.py  makefile  pyproject.toml
backend/backend/: main.py
backend/backend/agent/: __init__.py  persona_prompts.py  voice_agent.py
backend/backend/room/: voice_agent.py
backend/backend/router/: app.py
backend/backend/router/health/: router.py
backend/backend/router/room/: router.py  schema.py
backend/backend/store/: __init__.py  store.py
backend/backend/utils/: __init__.py  env.py  logger.py
frontend/: .env.example  package.json
frontend/src/: env.js
frontend/src/components/home/: Community.tsx
frontend/src/components/room/: AudioController.tsx  MediaTray.tsx  SpeakerPill.tsx
frontend/src/components/room/Peers/: AgentCard.tsx  PeerAudioTrack.tsx  RandomDots.tsx
frontend/src/hooks/: useTurnDetection.ts
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/pages/room/: [roomId].tsx  lobby.tsx
frontend/src/server/api/: root.ts
frontend/src/server/api/routers/: agent.ts  room.ts
frontend/src/store/: room.store.ts
frontend/src/styles/: globals.css
